# gcsopt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: demo.py  inspection.py
examples/facility_location/: circle_cover.py
examples/minimum_spanning_tree/: surveillance.py
examples/paper_examples/: README.md  camera_positioning.py  circle_cover.py  helicopter_flight.py  school_bus.py
examples/paper_examples/comparison/: comparison_plots.py
examples/paper_examples/comparison/camera_positioning/: rooms.npy  times.npy  values.npy
examples/paper_examples/comparison/helicopter_flight/: comparison.py  shortest_path_mccormick.py  times.npy  values.npy
examples/paper_examples/comparison/mstp/: comparison.py  minimum_spanning_tree_mccormick.py  minimum_spanning_tree_spatial_bb.py
examples/paper_examples/comparison/school_bus/: times.npy  values.npy
examples/paper_examples/comparison/spp/: comparison.py  islands.npy  shortest_path_spatial_bb.py
examples/paper_examples/comparison/tsp/: comparison.py  traveling_salesman_mccormick.py  traveling_salesman_spatial_bb.py
examples/shortest_path/: helicopter_flight.py  hello_world.py
examples/traveling_salesman/: manhattan_school_bus.py  school_bus.py
gcsopt/: __init__.py  edges.py  plot_utils.py  programs.py
gcsopt/graph_problems/: utils.py
gcsopt/graph_problems/rounding/: shortest_path.py
gcsopt/gurobipy/graph_problems/: shortest_path.py  utils.py
tests/: test_programs.py
