[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gcsopt"
version = "0.1.4"
description = "Library for solving optimization problems over Graphs of Convex Sets (GCS)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tobia Marcucci", email = "marcucci@ucsb.edu" },
]
dependencies = [
    "numpy",
    "cvxpy>=1.7.4",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
